align ment fix

--- a/src/components/Common/SliderCard/sliderCard.css
+++ b/src/components/Common/SliderCard/sliderCard.css
@@ -115,5 +115,9 @@
     .slider__card.active{
         transform: scale(1.1);
     }
+
+    .hero__banner .hero__banner_right {
+        margin: auto;
+    }
     
 }
